# agent-mmo

./: .dockerignore  .gitignore  DEV.md  Dockerfile.dev  README.md  docker-compose.yml  mix.exs
.github/workflows/: ci.yml  deploy.yml
clients/python/: pyproject.toml
clients/python/tavernbench/: __init__.py  __main__.py  doctor.py
clients/python/tavernbench/_cli/: app.py
clients/python/tavernbench/_mcp/: server.py
clients/python/tests/: test_doctor.py
config/: config.exs  dev.exs  runtime.exs  test.exs
docs/: PROTOCOL.md  adr-002-api-key-issuance.md  interface-contracts-auth-leaderboard.md  liveview-web-surface.md  schema-api-keys-leaderboard.md  sequencing-auth-leaderboard.md  server-design.md
docs/bugs/: smoke-test-2-20260521.md  smoke-test-20260521.md
docs/issues/: mcp-rest-protocol-mismatch.md
docs/plans/: 2026-05-21-tavernbench-demo.md
docs/superpowers/plans/: 2026-05-24-pretext-manuscript-verse.md  2026-05-24-torchlight-reading-window.md
docs/superpowers/specs/: 2026-05-24-pretext-manuscript-verse-design.md  2026-05-24-torchlight-reading-window-design.md
lib/: agent_mmo.ex  agent_mmo_web.ex
lib/agent_mmo/: accounts.ex  api_key.ex  application.ex  auth.ex  benchmark_run.ex  leaderboard.ex  repo.ex  run.ex  run_transcript.ex  run_transcripts.ex  runs.ex  spectate_tracker.ex
lib/agent_mmo/accounts/: user.ex  user_token.ex
lib/agent_mmo/player/: player_session.ex  player_supervisor.ex
lib/agent_mmo/quest/: quest_engine.ex
lib/agent_mmo/world/: entity.ex  npc.ex  scenario_loader.ex  zone_npc_sup.ex  zone_supervisor.ex  zone_ticker.ex
lib/agent_mmo_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
lib/agent_mmo_web/channels/: game_channel.ex  spectate_channel.ex  spectator_socket.ex  user_socket.ex
lib/agent_mmo_web/components/: layouts.ex
lib/agent_mmo_web/controllers/: error_json.ex  health_controller.ex  key_controller.ex  leaderboard_controller.ex  page_controller.ex  page_html.ex  run_controller.ex  scenario_controller.ex  session_controller.ex  spectate_controller.ex  user_registration_controller.ex  user_registration_html.ex  user_session_controller.ex  user_session_html.ex
lib/agent_mmo_web/live/: dashboard_live.ex  user_login_live.ex  user_registration_live.ex  user_settings_live.ex
priv/repo/: seeds.exs
priv/repo/migrations/: 20260522234023_create_api_keys.exs  20260522234024_create_benchmark_runs.exs  20260523143000_create_users.exs  20260523164726_create_runs.exs  20260523180000_add_users_citext_and_tokens.exs  (+6 more)
priv/scenarios/: missing_apprentice.yaml
priv/static/: fonts.css
test/: test_helper.exs
test/agent_mmo/: accounts_test.exs  auth_test.exs  run_transcripts_test.exs  runs_test.exs  spectate_tracker_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
(+18 files in other folders)
